<resources>
    <string name="app_name">Seminar Demo</string>
    <string name="content_description">TODO</string>
    <string name="todo">TODO</string>

    <string name="title_crypto">Cryptography</string>
    <string name="title_safety_net">SafetyNet API</string>
    <string name="title_encrypted_file">EncryptedFile</string>
    <string name="title_encrypted_sp">EncryptedSharePreferences</string>
    <string name="title_keystore">Keystore System</string>

    <string name="title_cipher">Cipher Class</string>
    <string name="et_cipher_message_hint">Write any message here</string>
    <string name="btn_decode">Decode</string>
    <string name="btn_encode">Encode</string>

    <string name="et_label_key">Key</string>
    <string name="et_label_encrypt_msg">Encrypt Message</string>
    <string name="et_label_decrypt_msg">Decrypt Message</string>

    <string name="title_msg_digest">Message Digest Class</string>

    <string name="title_signature">Signature Class</string>
    <string name="et_label_signature_sign">Sign</string>
    <string name="tv_label_signature_msg">Encrypt Message</string>
    <string name="et_label_verify_result">Verify Result</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_sign">Sign</string>

    <string name="title_attestation_API">Attestation API</string>
    <string name="tv_label_attestation_result_code">Json Web Signature</string>
    <string name="tv_label_attestation_result">Response result</string>
    <string name="btn_request">Request</string>

    <string name="title_safe_browsing_API">Safe Browsing API</string>
    <string name="tv_label_safe_browsing_result">Response result</string>
    <string name="et_safe_browsing_message_hint">Write any Url here</string>

    <string name="title_recaptcha_API">reCAPTCHA API</string>
    <string name="title_verify_app_API">Verify Apps API</string>
    <string name="key_alias">Key Alias</string>
    <string name="generate_key">Generate key</string>
    <string name="key_information">Key information</string>
    <string name="clear_text">Clear text</string>
    <string name="encrypt">Encrypt</string>
    <string name="encrypt_text">Encrypt Text</string>
    <string name="decrypt_text">Decrypt Text</string>
    <string name="decrypt">Decrypt</string>
    <string name="get_aliases">Get Aliases</string>
    <string name="file_s_name">"File's name"</string>
    <string name="file_s_content">"File's content"</string>
    <string name="write_file">Write file</string>
    <string name="encrypted_data_in_file">Encrypted data in file</string>
    <string name="read_file_normal">Read using normal File</string>
    <string name="read_file_encrypted">Read using EncryptedFile</string>
    <string name="decrypted_data_in_file">Decrypted data in file</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="add">Add to normal storage</string>
    <string name="pairs_added">Pairs added</string>
    <string name="add_to_encrypted_storage">Add to encrypted storage</string>
    <string name="key_to_encrypt">Key to encrypt</string>
    <string name="encrypted_pairs">Encrypted pairs</string>
    <string name="decrypted_pairs">Decrypted pairs</string>
    <string name="get_readable_pairs">Get readable pairs</string>
    <string name="tv_recaptcha_token">Token</string>
</resources>