<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".AndroidKeyStoreDemo">

        <EditText
            android:id="@+id/textKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key" />

        <EditText
            android:id="@+id/textValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairs_added"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textPairs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />

        <Button
            android:id="@+id/buttonAddStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_to_encrypted_storage" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrypted_pairs"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDecryptData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />

        <Button
            android:id="@+id/buttonGetReadable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_readable_pairs" />


    </LinearLayout>
</ScrollView>