<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".AndroidKeyStoreDemo">

        <EditText
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_s_name" />

        <EditText
            android:id="@+id/input_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_s_content" />

        <Button
            android:id="@+id/buttonSaveFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/write_file" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypted_data_in_file"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textEncryptData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />

        <Button
            android:id="@+id/buttonReadFileNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/read_file_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrypted_data_in_file"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDecryptData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />

        <Button
            android:id="@+id/buttonReadFileEncrypted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/read_file_encrypted" />

    </LinearLayout>
</ScrollView>