<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".AndroidKeyStoreDemo">

        <EditText
            android:id="@+id/editAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_alias" />

        <Button
            android:id="@+id/buttonGenerateKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/generate_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_information"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textKeyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editClearText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />

        <Button
            android:id="@+id/buttonEncrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/encrypt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textEncrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />

        <Button
            android:id="@+id/buttonDecrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/decrypt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrypt_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDecrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />
    </LinearLayout>
</ScrollView>